Exercice_5/web-frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
   name: web-frontend-svc
   namespace: web
spec:
  # External Service
  type: NodePort
  selector:
     app: web-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080
