Exercice_5/web-frontend-ingress .yaml
apiVersion: networkingl8s.io/v1
kind: Ingress
metadata:
  name: web-frontend-ingress 
  namespace: web
spec:
 rules:
 - http:
    paths:
    - path: /
      pathType: Prefix
      backend:
         service:
           name: web-frontend-svc
           port:
            number: 80
